# KasperskyOS_Robot

./: README.md
source_files/KasperskyOS_client/: CMakeLists.txt  cross-build.sh  image-build.sh  mount-image.sh
source_files/KasperskyOS_client/einit/: CMakeLists.txt
source_files/KasperskyOS_client/einit/src/: common.psl  init.yaml.in  security.psl  security_arm.psl  trusted.psl
source_files/KasperskyOS_client/server/: CMakeLists.txt
source_files/KasperskyOS_client/server/src/: GPIO.cpp  GPIO.h  JSON.cpp  JSON.h  Robot.cpp  Robot.h  TCP.cpp  TCP.h  main.cpp
source_files/linux_server/: README.md  main.py  mask_structure.py  recognition_module.py  sockets_module.py
source_files/server_GUI/: README.md  cofig_server.py  main.py  r.txt  server_robot.py
source_files/server_GUI/camera_robot_tracing/: calibration_script.py  find_coordinate.py  main_find_sticker.py  mask_structure.py  mlModel.py  recognition_module.py
source_files/server_GUI/connect_robot/: connect_robo.py  robot_addept.cpp
source_files/server_GUI/logic_drive/: angle_search.py  coordinates_stack.py  create_command.py  logic_drive.py
